assets/css/style.css
/* General Settings */

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Space+Mono&display=swap');


* {
    margin: 0;
    padding: 0;
    list-style-type: none;
    box-sizing: border-box;
    --color1: #4FD19C;
    --color2: #2F4858;
    --color3: #266275;
    --color4: #7AFFCA;
}

body {
    background-color: var(--color1);
    /* overflow: hidden; */
}

/* Navigation and logo */
nav {
    display: flex;
    justify-content: space-between;
    height: 100px;
}

nav img {
    height: 100px;

}

nav ul {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 66%;

}

nav li {
    width: 25%;
    padding: 10px;
    text-align: center;

}

nav a {
    text-decoration: none;
    font-family: Roboto Mono, sans-serif;
    text-transform: uppercase;
    color: var(--color2);
    font-size: 180%;
    margin: 0 auto;
}

nav a:hover {
    border-bottom: 1px solid var(--color3);
}

.active {
    border-bottom: 1px solid var(--color3);
}

.hero-container {
    display: flex;
    justify-content: center;
    margin: 80px;


    margin-bottom: 190px;
}

.profile-pic {
    background: url(../images/profilepic.png) top center;
    height: 500px;
    width: 33%;
    overflow: hidden;
    border: 20px solid var(--color3);
    border-radius: 70px 0px 0px;
}


.description {
    background-color: var(--color3);
    width: 67%;
    border: 20px double var(--color4);
    border-radius: 0px 0px 70px;
    font-family: Space Mono, sans-serif;
    font-size: 1.5vw;
    color: var(--color4);
    text-transform: uppercase;
    position: relative;
}

.description p {
    margin-left: 50px;
    font-size: 2.8vw;
}

.tools {
    margin-top: 130px;
    font-size: 1.3rem;
    margin-left: 20px;
}

#firstName {
    text-transform: uppercase;
    color: var(--color4);
    font-size: 7.7vw;
    font-family: Space Mono, sans-serif;
    text-align: center;
    line-height: 120px;
    position: absolute;
    top: 14%;
}

#lastName {
    text-transform: uppercase;
    color: var(--color4);
    font-size: 7.7vw;
    font-family: Space Mono, sans-serif;
    text-align: center;
    line-height: 120px;
    position: absolute;
    bottom: 5%;
    right: 5%;
}

footer {
    height: 100px;
    width: 100%;
    margin-top: 50px;


}

footer ul {
    display: flex;
    justify-content: space-around;
    align-items: center;

    height: 100px;
    background-color: var(--color3);
}

footer a {
    font-size: 50px;
    color: var(--color4);
}



/* Gallery */
#gallery-container {
    /* height: 750px; */
    padding: 20px;

}

#gallery-container img {
    height: 200px;
}

.art {
    position: relative;
    width: 200px;
    margin-right: 20px;
    margin-top: 15px;
    display: inline-block;
}

.presentation {
    display: none;
    position: absolute;
    background-color: rgba(6, 126, 140, 0.7);
    bottom: 5px;
    height: 98%;
    width: 100%;
    padding-top: 50%;
    padding-left: 10px;

}

.presentation span {
    font-family: Lato, sans-serif;
    text-align: center;
    text-transform: uppercase;
    color: var(--color1);
}

.art:hover .presentation {
    display: block;
}


@media screen and (min-width:1700px) {
    #firstName {

        top: 20%;
    }

}

@media screen and (max-width:800px) {

    nav {
        display: block;
        margin: auto;
    }

    nav ul {
        flex-direction: column;
        width: 100%;
        margin-right: 0;
    }

    .hero-container {
        display: inline-block;
        margin-top: 240px;
    }

    .profile-pic {
        width: 100%;
    }

    .description {
        width: 100%;
    }

    #firstName {
        left: 0;
        top: 0;

    }

    #lastName {

        top: 12%;
        bottom: 0;
        right: 0;
    }

    #gallery-container {
        margin-top: 220px;
    }
}

